feat: fix reroot of a tree in dynamic connectivity full algo
Signed-off-by: Ch-Adrian <aderter116@gmail.com>